[package]
name = "securitree"
version = "0.0.1"

edition = "2021"
rust-version = "1.67"

authors = ['GeekMasher']
description = "SecuriTree CLI"
readme = "README.md"
homepage = "https://github.com/GeekMasher/securitree"
repository = "https://github.com/GeekMasher/securitree"
license = "MIT"

keywords = ["containers", "security", "compose"]


[dependencies]
# CLI parser
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
dialoguer = "0.10"
indicatif = "0.17"
# Error handling
thiserror = "1"
anyhow = "1"
# logging
log = "0.4"
env_logger = "0.10"
# serde
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"

